# ispie-3000

./: .gitignore  CMakeLists.txt  README.md  idea.txt
src/: main.cpp
src/app/modules/shome/: shome_module.cpp  shome_module.h
src/app/os/win32/modules/shome/wisp/: win32_wisp.cpp  win32_wisp.h
src/app/os/win32/modules/shome/wisp_enumerator/: win32_wisp_enumerator.cpp  win32_wisp_enumerator.h
src/app/os/win32/modules/shome/wisp_snapshot/: win32_wisp_snapshot.cpp  win32_wisp_snapshot.h
src/core/common/: types.h  utility.cpp  utility.h
src/core/interfaces/: module_if.h  wisp_enumerator_if.h  wisp_if.h  wisp_snapshot_if.h
